- fix unintended submit in <CalculatingNumberInput> - make summaryLabels in entityTypes.operation consistent with their respective targets - add className prop to <FieldEl> and <FieldRow> - add class .padding to forms.module.css - move tabIndex={-1} attribute behind ...rest in hidden input of <InputObject> - add padding to fields in <TestCalculatingNumberInput>

--- a/src/formLayouts/forms.module.css
+++ b/src/formLayouts/forms.module.css
@@ -13,9 +13,7 @@
 }
 
 .border {
-    border: 1px;
-    border-style: solid;
-    border-color: inherit;
+    border: 1px solid inherit;
 }
 
 .noBorder {
@@ -24,6 +22,10 @@
 
 .row {
     display: table-row;
+}
+
+.padding {
+    padding-bottom: 1em;
 }
 
 .cell {
